Update impianti data from Google Sheets

--- a/mappa_impianti.json
+++ b/mappa_impianti.json
@@ -1,10 +1,10 @@
 [
   {
-    "Nominativo": "Residenzia",
+    "Nominativo": "Roma",
     "Coordinate X": "41.920224",
     "Coordinate Y": "12.713442",
-    "Tipologia": "PRIVATO",
-    "Tipologia Description": "Impianto a Roma",
+    "Tipologia": "A",
+    "Tipologia Description": "a Roma",
     "Categoria": "Fotovoltaico Residenziale",
     "Potenza": "6 kWp",
     "Energia Prodotta": "7200 kWh/anno",
@@ -15,14 +15,15 @@
     "Foto3": "https://www.myenergy.it/media/cache/product_gallery/files/prodotti/2/pannelli-solari-novara.jpg",
     "CTR": 111,
     "Provincia": "Roma",
+    "": "Fotovoltaico Residenziale",
     "latitude": "41.920224",
     "longitude": "12.713442"
   },
   {
-    "Nominativo": "Azienda 1",
+    "Nominativo": "Milano",
     "Coordinate X": "45.448738",
     "Coordinate Y": "9.281933",
-    "Tipologia": "AZIENDA",
+    "Tipologia": "B",
     "Tipologia Description": "Chiavi in mano a Milano",
     "Categoria": "Fotovoltaico Industriale",
     "Potenza": "250 kWp",
@@ -34,6 +35,7 @@
     "Foto3": "https://www.myenergy.it/media/cache/product_gallery/files/prodotti/2/pannelli-solari-novara.jpg",
     "CTR": 222,
     "Provincia": "Milano",
+    "": "Fotovoltaico Industriale",
     "latitude": "45.448738",
     "longitude": "9.281933"
   },
@@ -41,8 +43,8 @@
     "Nominativo": "Spagna",
     "Coordinate X": "40.075948",
     "Coordinate Y": "-0.941739",
-    "Tipologia": "ESTERO",
-    "Tipologia Description": "Fotovoltaico a Spagna",
+    "Tipologia": "C",
+    "Tipologia Description": "a Spagna",
     "Categoria": "Fotovoltaico Estero",
     "Potenza": "4 MWp",
     "Energia Prodotta": "8200 MWh/anno",
@@ -53,14 +55,15 @@
     "Foto3": "https://www.myenergy.it/media/cache/product_gallery/files/prodotti/2/pannelli-solari-novara.jpg",
     "CTR": 333,
     "Provincia": "Spagna",
+    "": "Fotovoltaico Estero",
     "latitude": "40.075948",
     "longitude": "-0.941739"
   },
   {
-    "Nominativo": "Superbonus",
+    "Nominativo": "Torino",
     "Coordinate X": "45.195999",
     "Coordinate Y": "7.792056",
-    "Tipologia": "SUPERBONUS",
+    "Tipologia": "D",
     "Tipologia Description": "Progetto Superbonus a Torino",
     "Categoria": "Superbonus",
     "Potenza": "20 kWp",
@@ -72,15 +75,16 @@
     "Foto3": "https://www.myenergy.it/media/cache/product_gallery/files/prodotti/2/pannelli-solari-novara.jpg",
     "CTR": 444,
     "Provincia": "Torino",
+    "": "Progetti Superbonus",
     "latitude": "45.195999",
     "longitude": "7.792056"
   },
   {
-    "Nominativo": "Brescia Agrivoltaico ",
+    "Nominativo": "Brescia",
     "Coordinate X": "45.679617",
     "Coordinate Y": "10.102156",
-    "Tipologia": "AGRIVOLTAICO",
-    "Tipologia Description": "Impianto a Brescia",
+    "Tipologia": "E",
+    "Tipologia Description": "a Brescia",
     "Categoria": "Agrivoltaico",
     "Potenza": "2 MWp",
     "Energia Prodotta": "4200 MWh/anno",
@@ -91,14 +95,15 @@
     "Foto3": "https://www.myenergy.it/media/cache/product_gallery/files/prodotti/2/pannelli-solari-novara.jpg",
     "CTR": 555,
     "Provincia": "Brescia",
+    "": "Agrivoltaico",
     "latitude": "45.679617",
     "longitude": "10.102156"
   },
   {
-    "Nominativo": "Bando pubblico",
+    "Nominativo": "Emilia-Romagna",
     "Coordinate X": "44.236517",
     "Coordinate Y": "10.803803",
-    "Tipologia": "PUBBLICA AMMINISTRAZIONE",
+    "Tipologia": "F",
     "Tipologia Description": "Gara pubblica aggiudicata",
     "Categoria": "Pubblica Amministrazione",
     "Potenza": "890 kWp",
@@ -110,14 +115,15 @@
     "Foto3": "https://www.myenergy.it/media/cache/product_gallery/files/prodotti/2/pannelli-solari-novara.jpg",
     "CTR": 666,
     "Provincia": "Emilia-Romagna",
+    "": "Pubblica Amministrazione",
     "latitude": "44.236517",
     "longitude": "10.803803"
   },
   {
-    "Nominativo": "PowerUp your Home",
+    "Nominativo": "Bologna",
     "Coordinate X": "44.501075",
     "Coordinate Y": "11.203447",
-    "Tipologia": "EFFICIENTAMENTO",
+    "Tipologia": "G",
     "Tipologia Description": "Efficientamento energetico di Residenza a Bologna",
     "Categoria": "Efficientamento Energetico",
     "Potenza": "6 kWp",
@@ -129,33 +135,35 @@
     "Foto3": "https://www.myenergy.it/media/cache/product_gallery/files/prodotti/2/pannelli-solari-novara.jpg",
     "CTR": 777,
     "Provincia": "Bologna",
+    "": "Efficientamento Energetico",
     "latitude": "44.501075",
     "longitude": "11.203447"
   },
   {
-    "Nominativo": "Azienda 2",
-    "Coordinate X": "45.448738",
-    "Coordinate Y": "9.281933",
-    "Tipologia": "AZIENDA",
-    "Tipologia Description": "Chiavi in mano a Milano",
-    "Categoria": "Fotovoltaico Industriale",
-    "Potenza": "250 kWp",
-    "Energia Prodotta": "280 MWh/anno",
-    "CO2 risparmiato": "250 ton.",
+    "Nominativo": "Bologna 2",
+    "Coordinate X": "44.501075",
+    "Coordinate Y": "11.203447",
+    "Tipologia": "H",
+    "Tipologia Description": "Efficientamento energetico di Residenza a Bologna",
+    "Categoria": "Efficientamento Energetico",
+    "Potenza": "6 kWp",
+    "Energia Prodotta": "7200 kWh/anno",
+    "CO2 risparmiato": "2 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
     "Foto2": "https://www.myenergy.it/media/cache/product_gallery/files/prodotti/6/13122011242.jpg",
     "Foto3": "https://www.myenergy.it/media/cache/product_gallery/files/prodotti/2/pannelli-solari-novara.jpg",
-    "CTR": 222,
-    "Provincia": "Milano",
-    "latitude": "45.448738",
-    "longitude": "9.281933"
+    "CTR": 777,
+    "Provincia": "Bologna",
+    "": "Efficientamento Energetico",
+    "latitude": "44.501075",
+    "longitude": "11.203447"
   },
   {
-    "Nominativo": "Azienda 3",
+    "Nominativo": "Milano",
     "Coordinate X": "45.448738",
     "Coordinate Y": "9.281933",
-    "Tipologia": "AZIENDA",
+    "Tipologia": "I",
     "Tipologia Description": "Chiavi in mano a Milano",
     "Categoria": "Fotovoltaico Industriale",
     "Potenza": "250 kWp",
