--- a/mappa_impianti.json
+++ b/mappa_impianti.json
@@ -150,5 +150,12 @@
     "Provincia": "Milano",
     "latitude": "45.448738",
     "longitude": "9.281933"
+  },
+  {
+    "Coordinate X": "43.60074609934358",
+    "Coordinate Y": "13.522326318819005",
+    "Tipologia": "J",
+    "latitude": "43.60074609934358",
+    "longitude": "13.522326318819005"
   }
 ]
