--- a/mappa_impianti.json
+++ b/mappa_impianti.json
@@ -155,6 +155,7 @@
     "Coordinate X": "43.60074609934358",
     "Coordinate Y": "13.522326318819005",
     "Tipologia": "J",
+    "Categoria": "Domotica",
     "latitude": "43.60074609934358",
     "longitude": "13.522326318819005"
   }
