--- a/mappa_impianti.json
+++ b/mappa_impianti.json
@@ -112,5 +112,24 @@
     "Provincia": "Bologna",
     "latitude": "44.501075",
     "longitude": "11.203447"
+  },
+  {
+    "Nominativo": "Milano",
+    "Coordinate X": "45.418395836050834",
+    "Coordinate Y": "9.267079128238626",
+    "Tipologia": "B",
+    "Tipologia Description": "Industriale",
+    "Categoria": "Fotovoltaico Industriale",
+    "Potenza": "6 kWp",
+    "Energia Prodotta": "7200 kWh/anno",
+    "CO2 risparmiato": "2 ton.",
+    "Link a pagina del Progetto": "https://www.myenergy.it/",
+    "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
+    "Foto2": "https://www.myenergy.it/media/cache/product_gallery/files/prodotti/6/13122011242.jpg",
+    "Foto3": "https://www.myenergy.it/media/cache/product_gallery/files/prodotti/2/pannelli-solari-novara.jpg",
+    "CTR": 777,
+    "Provincia": "Bologna",
+    "latitude": "45.418395836050834",
+    "longitude": "9.267079128238626"
   }
 ]
