Update impianti data from Google Sheets

--- a/mappa_impianti.json
+++ b/mappa_impianti.json
@@ -128,7 +128,7 @@
     "Foto2": "https://www.myenergy.it/media/cache/product_gallery/files/prodotti/6/13122011242.jpg",
     "Foto3": "https://www.myenergy.it/media/cache/product_gallery/files/prodotti/2/pannelli-solari-novara.jpg",
     "CTR": 777,
-    "Provincia": "Bologna",
+    "Provincia": "Milano",
     "latitude": "45.418395836050834",
     "longitude": "9.267079128238626"
   }
