Update impianti data from Google Sheets

--- a/mappa_impianti.json
+++ b/mappa_impianti.json
@@ -1,9 +1,9 @@
 [
   {
-    "Nominativo": "Roma",
+    "Nominativo": "Nome Azienda 1",
     "Coordinate X": "41.920224",
     "Coordinate Y": "12.713442",
-    "Tipologia": "A",
+    "Tipologia": "Roma",
     "Tipologia Description": "a Roma",
     "Categoria": "Fotovoltaico Residenziale",
     "Potenza": "6 kWp",
@@ -19,10 +19,10 @@
     "longitude": "12.713442"
   },
   {
-    "Nominativo": "Spagna",
+    "Nominativo": "Nome Azienda 2",
     "Coordinate X": "40.075948",
     "Coordinate Y": "-0.941739",
-    "Tipologia": "C",
+    "Tipologia": "Spagna",
     "Tipologia Description": "a Spagna",
     "Categoria": "Fotovoltaico Estero",
     "Potenza": "4 MWp",
@@ -38,10 +38,10 @@
     "longitude": "-0.941739"
   },
   {
-    "Nominativo": "Torino",
+    "Nominativo": "Nome Azienda 3",
     "Coordinate X": "45.195999",
     "Coordinate Y": "7.792056",
-    "Tipologia": "D",
+    "Tipologia": "Torino",
     "Tipologia Description": "Progetto Superbonus a Torino",
     "Categoria": "Superbonus",
     "Potenza": "20 kWp",
@@ -57,10 +57,10 @@
     "longitude": "7.792056"
   },
   {
-    "Nominativo": "Brescia",
+    "Nominativo": "Nome Azienda 4",
     "Coordinate X": "45.679617",
     "Coordinate Y": "10.102156",
-    "Tipologia": "E",
+    "Tipologia": "Brescia",
     "Tipologia Description": "a Brescia",
     "Categoria": "Agrivoltaico",
     "Potenza": "2 MWp",
@@ -76,10 +76,10 @@
     "longitude": "10.102156"
   },
   {
-    "Nominativo": "Emilia-Romagna",
+    "Nominativo": "Nome Azienda 5",
     "Coordinate X": "44.236517",
     "Coordinate Y": "10.803803",
-    "Tipologia": "F",
+    "Tipologia": "Emilia-Romagna",
     "Tipologia Description": "Gara pubblica aggiudicata",
     "Categoria": "Pubblica Amministrazione",
     "Potenza": "890 kWp",
@@ -95,10 +95,10 @@
     "longitude": "10.803803"
   },
   {
-    "Nominativo": "Bologna 2",
+    "Nominativo": "Nome Azienda 6",
     "Coordinate X": "44.501075",
     "Coordinate Y": "11.203447",
-    "Tipologia": "H",
+    "Tipologia": "Bologna 2",
     "Tipologia Description": "Efficientamento energetico di Residenza a Bologna",
     "Categoria": "Efficientamento Energetico",
     "Potenza": "6 kWp",
@@ -114,10 +114,10 @@
     "longitude": "11.203447"
   },
   {
-    "Nominativo": "Milano",
+    "Nominativo": "Nome Azienda 7",
     "Coordinate X": "46.418395836050834",
     "Coordinate Y": "9.267079128238626",
-    "Tipologia": "B",
+    "Tipologia": "Milano",
     "Tipologia Description": "Industriale",
     "Categoria": "Fotovoltaico Industriale",
     "Potenza": "6 kWp",
