Update impianti data from Google Sheets

--- a/mappa_impianti.json
+++ b/mappa_impianti.json
@@ -7,7 +7,9 @@
     "Tipologia Description": "a Roma",
     "Categoria": "Fotovoltaico Residenziale",
     "Potenza": "6 kWp",
-    "Energia Prodotta": "7200 kWh/anno",
+    "Power": 6,
+    "Producibilit?": 1102,
+    "Energia Prodotta": "6612 kWh/anno",
     "CO2 risparmiato": "2 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -25,8 +27,10 @@
     "Tipologia": "Spagna",
     "Tipologia Description": "a Spagna",
     "Categoria": "Fotovoltaico Estero",
-    "Potenza": "4 MWp",
-    "Energia Prodotta": "8200 MWh/anno",
+    "Potenza": "5 kWp",
+    "Power": 5,
+    "Producibilit?": 1235,
+    "Energia Prodotta": "6175 kWh/anno",
     "CO2 risparmiato": "2600 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -44,8 +48,10 @@
     "Tipologia": "Torino",
     "Tipologia Description": "Progetto Superbonus a Torino",
     "Categoria": "Superbonus",
-    "Potenza": "20 kWp",
-    "Energia Prodotta": "24 MWh/anno",
+    "Potenza": "23 kWp",
+    "Power": 23,
+    "Producibilit?": 1200,
+    "Energia Prodotta": "27600 kWh/anno",
     "CO2 risparmiato": "25 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -63,8 +69,10 @@
     "Tipologia": "Brescia",
     "Tipologia Description": "a Brescia",
     "Categoria": "Agrivoltaico",
-    "Potenza": "2 MWp",
-    "Energia Prodotta": "4200 MWh/anno",
+    "Potenza": "3 kWp",
+    "Power": 3,
+    "Producibilit?": 1001,
+    "Energia Prodotta": "3003 kWh/anno",
     "CO2 risparmiato": "2200 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -82,8 +90,10 @@
     "Tipologia": "Emilia-Romagna",
     "Tipologia Description": "Gara pubblica aggiudicata",
     "Categoria": "Pubblica Amministrazione",
-    "Potenza": "890 kWp",
-    "Energia Prodotta": "900 MWh/anno",
+    "Potenza": "330 kWp",
+    "Power": 330,
+    "Producibilit?": 1201,
+    "Energia Prodotta": "396330 kWh/anno",
     "CO2 risparmiato": "1000 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -101,8 +111,10 @@
     "Tipologia": "Bologna 2",
     "Tipologia Description": "Efficientamento energetico di Residenza a Bologna",
     "Categoria": "Efficientamento Energetico",
-    "Potenza": "6 kWp",
-    "Energia Prodotta": "7200 kWh/anno",
+    "Potenza": "102 kWp",
+    "Power": 102,
+    "Producibilit?": 1035,
+    "Energia Prodotta": "105570 kWh/anno",
     "CO2 risparmiato": "2 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -120,8 +132,10 @@
     "Tipologia": "Milano",
     "Tipologia Description": "Industriale",
     "Categoria": "Fotovoltaico Industriale",
-    "Potenza": "6 kWp",
-    "Energia Prodotta": "7200 kWh/anno",
+    "Potenza": "1200 kWp",
+    "Power": 1200,
+    "Producibilit?": 991,
+    "Energia Prodotta": "1189200 kWh/anno",
     "CO2 risparmiato": "2 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
