--- a/mappa_impianti.json
+++ b/mappa_impianti.json
@@ -51,7 +51,7 @@
     "Potenza": "23 kWp",
     "Power": 23,
     "Producibilit?": 1200,
-    "Energia Prodotta": "27600 kWh/anno",
+    "Energia Prodotta": "27,6 MWh/anno",
     "CO2 risparmiato": "25 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -93,7 +93,7 @@
     "Potenza": "330 kWp",
     "Power": 330,
     "Producibilit?": 1201,
-    "Energia Prodotta": "396330 kWh/anno",
+    "Energia Prodotta": "396,33 MWh/anno",
     "CO2 risparmiato": "1000 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -114,7 +114,7 @@
     "Potenza": "102 kWp",
     "Power": 102,
     "Producibilit?": 1035,
-    "Energia Prodotta": "105570 kWh/anno",
+    "Energia Prodotta": "105,57 MWh/anno",
     "CO2 risparmiato": "2 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -132,10 +132,10 @@
     "Tipologia": "Milano",
     "Tipologia Description": "Industriale",
     "Categoria": "Fotovoltaico Industriale",
-    "Potenza": "1200 kWp",
+    "Potenza": "1,2 MWp",
     "Power": 1200,
     "Producibilit?": 991,
-    "Energia Prodotta": "1189200 kWh/anno",
+    "Energia Prodotta": "1189,2 MWh/anno",
     "CO2 risparmiato": "2 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
