--- a/mappa_impianti.json
+++ b/mappa_impianti.json
@@ -9,7 +9,7 @@
     "Potenza": "6 kWp",
     "Power": 6,
     "Producibilit?": 1102,
-    "Energia Prodotta": "6612 kWh/anno",
+    "Energia Prodotta": "6.612 kWh",
     "CO2 risparmiato": "2 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -30,7 +30,7 @@
     "Potenza": "5 kWp",
     "Power": 5,
     "Producibilit?": 1235,
-    "Energia Prodotta": "6175 kWh/anno",
+    "Energia Prodotta": "6.175 kWh",
     "CO2 risparmiato": "2600 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -51,7 +51,7 @@
     "Potenza": "23 kWp",
     "Power": 23,
     "Producibilit?": 1200,
-    "Energia Prodotta": "27,6 MWh/anno",
+    "Energia Prodotta": "28 MWh",
     "CO2 risparmiato": "25 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -72,7 +72,7 @@
     "Potenza": "3 kWp",
     "Power": 3,
     "Producibilit?": 1001,
-    "Energia Prodotta": "3003 kWh/anno",
+    "Energia Prodotta": "3.003 kWh",
     "CO2 risparmiato": "2200 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -93,7 +93,7 @@
     "Potenza": "330 kWp",
     "Power": 330,
     "Producibilit?": 1201,
-    "Energia Prodotta": "396,33 MWh/anno",
+    "Energia Prodotta": "396 MWh",
     "CO2 risparmiato": "1000 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -114,7 +114,7 @@
     "Potenza": "102 kWp",
     "Power": 102,
     "Producibilit?": 1035,
-    "Energia Prodotta": "105,57 MWh/anno",
+    "Energia Prodotta": "106 MWh",
     "CO2 risparmiato": "2 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
@@ -135,7 +135,7 @@
     "Potenza": "1,2 MWp",
     "Power": 1200,
     "Producibilit?": 991,
-    "Energia Prodotta": "1189,2 MWh/anno",
+    "Energia Prodotta": "1.189 MWh",
     "CO2 risparmiato": "2 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
