--- a/mappa_impianti.json
+++ b/mappa_impianti.json
@@ -51,7 +51,7 @@
     "Potenza": "23 kWp",
     "Power": 23,
     "Producibilit?": 1200,
-    "Energia Prodotta": "28 MWh/anno",
+    "Energia Prodotta": "27.600 kWh/anno",
     "CO2 risparmiato": "25 ton.",
     "Link a pagina del Progetto": "https://www.myenergy.it/",
     "Foto1": "https://www.myenergy.it/files/prodotti/6/img_0384%20-%20copia.jpg",
